--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -1,11 +1,12 @@
+--- 
+layout: base 
+tags: nav 
+title: About Me 
+navtitle: About 
+navorder: 4 
+permalink: about/index.html 
 ---
-layout: base
-tags: nav
-title: About Me
-navtitle: About
-navorder: 4
-permalink: about/index.html
----
+
 <div class="page page--about">
     <header class="page__header">
         <h1 class="page__title">Hey there.</h1>
@@ -15,14 +16,8 @@ permalink: about/index.html
         <div class="about">
             <div class="about__header">
                 <div class="about__photo">
-                    <img
-                        class="responsive-image js-responsive-image"
-                        src="{{ '/assets/images/ndo-1601.png' | url }}"
-                        srcset="{{ '/assets/images/ndo-801.png' | url }} 800w, 
-                        {{ '/assets/images/ndo-1601.png' | url }} 1600w"
-                        sizes="(min-width: 940px) 40vw, 100vw"
-                        alt="Nico Domino"
-                    />
+                    <img class="responsive-image js-responsive-image" src="{{ '/assets/images/ndo-1601.png' | url }}" srcset="{{ '/assets/images/ndo-801.png' | url }} 800w,
+                        {{ '/assets/images/ndo-1601.png' | url }} 1600w" sizes="(min-width: 940px) 40vw, 100vw" alt="Nico Domino"/>
                 </div>
                 <div class="about__intro lead">
                     <p>
@@ -33,41 +28,57 @@ permalink: about/index.html
             <div class="about__content markdown">
                 <h2>Summary</h2>
                 <p>
-                    My day job responsibilities include managing customer hardware and software in the datacenter, ensuring your businesses critical infrastructure stays up and connected to the rest of the world.
+                    My day job responsibilities include managing customer hardware and software in the datacenter, ensuring their businesses critical infrastructure stays up and connected to the rest of the world.
                 </p>
-                <p>    
-                    In addition, I also like to make my colleagues lives easier by developing quick, slick, and easy to use web applications to automate various business processes. After dark you will usually find me in front of a keyboard as well, where I like to work on open source software. 
+                <p>
+                    In addition, I really enjoy making my colleagues lives easier by developing quick, slick, and easy to use web applications to automate various business processes. After my 9 to 5 you will often find me in front of a keyboard as well, where I like to work on open source software.
                 </p>
-                <p> 
-                    You can find some of my most recent work below. 
+                <p>
+                    You can find some of my most recent work below.
                 </p>
-            
+
                 <h2>Projects</h2>
                 <div class="projects">
                     {% for project in projects %}
-                    <div class="project__card">
-                        <div class="decorativeSquare"></div>
-                        {% if project.image %}
-                        <img class="project__screenshot" src="{{ project.image }}" alt="Screenshot {{ project.name }}"></img>
-                        {% endif %}
-                        <div class="project__details">
-                            <a target="_blank" href="{{ project.url }}">
-                                <h3 class="project__label">{{ project.name  }}</h3>
-                                <div class="project__desc">
-                                    {{ project.desc }}
+                        <div class="project__card">
+                            <div class="project__square project__square--left"></div>
+                            {% if project.image %}
+                                <img class="project__screenshot" src="{{ project.image }}" alt="Screenshot {{ project.name }}"></img>
+                            {% endif %}
+                            {% if project.tech|length %}
+                                <div class="project__techWrapper">
+                                {% for techs in project.tech %}
+                                    <img height="64" class="project__tech" src="/assets/images/tech/{{ techs }}.svg" alt="{{ techs }} Logo" title="{{ techs }}"></img>
+                                {% endfor %}
                                 </div>
-                            </a>
+                            {% endif %}
+                            <div class="project__details">
+                                <a target="_blank" rel="noopener noreferer" href="{{ project.url }}">
+                                    <h3 class="project__label">
+                                        {{ project.name  }}
+                                        <svg class="project__label--link" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
+                                    </h3>
+                                    <div class="project__desc">
+                                        {{ project.desc }}
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="project__square project__square--right"></div>
                         </div>
-                        <div class="decorativeSquare2"></div>
-                    </div>
                     {% endfor %}
                 </div>
 
                 <h2>Online</h2>
                 <ul class="about__social">
-                    <li>{% icon "twitter" %}<a href="{{ author.social.twitter.url }}">Twitter</a></li>
-                    <li>{% icon "github" %}<a href="{{ author.social.github.url }}">Github</a></li>
-                    <li>{% icon "keybase" %}<a href="{{ author.social.keybase.url }}">Keybase</a></li>
+                    <li>{% icon "twitter" %}
+                        <a href="{{ author.social.twitter.url }}">Twitter</a>
+                    </li>
+                    <li>{% icon "github" %}
+                        <a href="{{ author.social.github.url }}">Github</a>
+                    </li>
+                    <li>{% icon "keybase" %}
+                        <a href="{{ author.social.keybase.url }}">Keybase</a>
+                    </li>
                 </ul>
             </div>
         </div>
